2000-05-14  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/common/gpb.c (gih_save_dialog): Fix typo introduced
	when gimp_spin_button_new() was taken into use. Now you can adjust
	the cell height again.

2000-05-14  Michael Natterer  <mitch@gimp.org>

	After a weekend of extensive mail exchange with the signal crew,
	we finally found that #2742 is not a Gimp bug but a real OSF/1
	bug. OSF/1 does _not_ reliably restart read() and write() calls
	on certain slow devices (pipes).

	* libgimp/gimpwire.[ch]: guard all read/write calls on the wire
	with loops checking for EINTR. This has to be done "manually"
	as glib's GIOChannels return G_IO_ERROR_UNKNOWN on the occurence
	of EINTR (which is a bug, too).
	s/int/gboolean and minor cleanups while I was on it (not changing
	any logic).

	This fix depends on the current (broken) state of the GIOChannel
	implementation and is scheduled for removal as soon as glib
	behaves nicely here.

	Left SA_RESTART there for the moment in app/main.c. See it as
	defensive programming or just my fear to change two #2742-related
	places at the same time. We might choose to remove SA_RESTART
	later. Many thanks again to Austin, Garry and Tim.

2000-05-12  Sven Neumann  <sven@gimp.org>

	* gimpdrawable.c: enabled the (commented out) signal 
	"invalidate_preview".
	
	* app/layers_dialog.c: connect to the "invalidate_preview"
	signal to catch changes that need to be shown in the layer
	previews. Synthetize an expose event when a layer changes. 
	
	Expose events are optimzed away by GTK+ if the widget is not
	visible. Therefore, previews not visible in the layers_dialog
	are not redrawn when they invalidate. Later the preview gets
	validated by the image_preview in lc_dialog but is never
	propagated to the layer_pixmap. We work around this by using an
	additional flag "layer_pixmap_valid" so that the pixmap gets
	updated once the preview scrolls into sight.
	
	We should probably do the same for all drawables (masks, 